--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    style-src 'self' https://fonts.googleapis.com 'unsafe-inline';
+    font-src https://fonts.gstatic.com;
+    script-src 'self' https://kit.fontawesome.com 'unsafe-inline';
+    img-src 'self' https://drive.google.com https://*.googleusercontent.com data:;
+    connect-src 'self' https://script.google.com
+  ">
   <title>Admin - CentrodeCompra</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    body { font-family: Roboto, Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
-    .form-container { max-width: 600px; margin: 0 auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    .form-group { margin-bottom: 15px; }
-    label { display: block; margin-bottom: 5px; font-weight: bold; }
-    input, select, textarea { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-    textarea { resize: vertical; min-height: 100px; }
-    button { padding: 10px 20px; background-color: #ff6200; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
-    button:hover { background-color: #e55a00; }
-    .error-message { color: red; display: none; text-align: center; margin-top: 10px; }
-    .success-message { color: green; display: none; text-align: center; margin-top: 10px; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="admin">
   <div class="form-container">
     <h2>Adicionar Produto</h2>
     <form id="produto-form" onsubmit="adicionarProduto(event)">
